--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
-    "react-router-dom": "^5.2.0"
-    "morgan": "^1.10.0",
-    "node-fetch": "^2.6.1",
-    "npm-run-all": "^4.1.5"
+    "react-router-dom": "^5.2.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {},
   "scripts": {
